// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard component should pass render stages when provided in dashboard object 1`] = `
Array [
  <h2
    class="govuk-heading-l"
  >
    My work
  </h2>,
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-full dashboard__todo"
    >
      MOCK_CARD
    </div>
  </div>,
  <h2
    class="govuk-heading-l"
  >
    My teams work
  </h2>,
  <ul
    class="govuk-grid-row dashboard__teams"
  >
    <li
      class="govuk-grid-column-full dashboard__teams--item"
    >
      <h3
        class="govuk-heading-m"
      >
        Team A
        <a
          class="govuk-body govuk-link margin-left--small"
          href="/workstack/team/undefined"
        >
          view
        </a>
      </h3>
      <ul
        class="govuk-grid-row dashboard__workflows"
      >
        <li
          class="govuk-grid-column-full dashboard__workflows--item"
        >
          <h4
            class="govuk-heading-s"
          >
            Workflow A
            <a
              class="govuk-body govuk-link margin-left--small"
              href="/workstack/team/undefined/workflow/undefined"
            >
              view
            </a>
          </h4>
          <ul
            class="govuk-grid-row dashboard__stages"
          >
            MOCK_CARD
          </ul>
        </li>
      </ul>
    </li>
  </ul>,
]
`;

exports[`Dashboard component should pass render teams when provided in dashboard object 1`] = `
Array [
  <h2
    class="govuk-heading-l"
  >
    My work
  </h2>,
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-full dashboard__todo"
    >
      MOCK_CARD
    </div>
  </div>,
  <h2
    class="govuk-heading-l"
  >
    My teams work
  </h2>,
  <ul
    class="govuk-grid-row dashboard__teams"
  >
    <li
      class="govuk-grid-column-full dashboard__teams--item"
    >
      <h3
        class="govuk-heading-m"
      >
        Team A
      </h3>
      <ul
        class="govuk-grid-row dashboard__workflows"
      >
        <p
          class="govuk-body govuk-grid-column-full"
        >
          No items to display
        </p>
      </ul>
    </li>
  </ul>,
]
`;

exports[`Dashboard component should pass render workflows when provided in dashboard object 1`] = `
Array [
  <h2
    class="govuk-heading-l"
  >
    My work
  </h2>,
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-full dashboard__todo"
    >
      MOCK_CARD
    </div>
  </div>,
  <h2
    class="govuk-heading-l"
  >
    My teams work
  </h2>,
  <ul
    class="govuk-grid-row dashboard__teams"
  >
    <li
      class="govuk-grid-column-full dashboard__teams--item"
    >
      <h3
        class="govuk-heading-m"
      >
        Team A
        <a
          class="govuk-body govuk-link margin-left--small"
          href="/workstack/team/undefined"
        >
          view
        </a>
      </h3>
      <ul
        class="govuk-grid-row dashboard__workflows"
      >
        <li
          class="govuk-grid-column-full dashboard__workflows--item"
        >
          <h4
            class="govuk-heading-s"
          >
            Workflow A
          </h4>
          <ul
            class="govuk-grid-row dashboard__stages"
          >
            <p
              class="govuk-body govuk-grid-column-full"
            >
              No items to display
            </p>
          </ul>
        </li>
      </ul>
    </li>
  </ul>,
]
`;

exports[`Dashboard component should pass user tags when provided in the dashboard user object 1`] = `
Array [
  <h2
    class="govuk-heading-l"
  >
    My work
  </h2>,
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-full dashboard__todo"
    >
      MOCK_CARD
    </div>
  </div>,
  <h2
    class="govuk-heading-l"
  >
    My teams work
  </h2>,
  <ul
    class="govuk-grid-row dashboard__teams"
  >
    <p
      class="govuk-body govuk-grid-column-full"
    >
      No items to display
    </p>
  </ul>,
]
`;

exports[`Dashboard component should render with default props 1`] = `
Array [
  <h2
    class="govuk-heading-l"
  >
    My work
  </h2>,
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-full dashboard__todo"
    >
      MOCK_CARD
    </div>
  </div>,
  <h2
    class="govuk-heading-l"
  >
    My teams work
  </h2>,
  <ul
    class="govuk-grid-row dashboard__teams"
  >
    <p
      class="govuk-body govuk-grid-column-full"
    >
      No items to display
    </p>
  </ul>,
]
`;
